Backport from JDK 13